fix(theme-base10): small gap between toolbar buttons

--- a/profiles/theme-base10/resources/css/base.css
+++ b/profiles/theme-base10/resources/css/base.css
@@ -125,6 +125,7 @@ pb-page[unresolved]~.splash {
 .toolbar ul {
     padding-left: var(--s-2);
     padding-right: var(--s-2);
+    column-gap: var(--s-2);
 }
 
 .toolbar li {
